added opportunity to link user
