# CargoCore/src/main/kotlin/org/example/cargotransporationmonitoring/users/UserController.kt
@@ -6,20 +6,25 @@ import com.example.model.users.LinkUserRequest
 import com.example.model.users.RegisterUserRequest
 import com.example.model.users.UpdateUserRequest
 import org.example.cargotransporationmonitoring.security.keycloak.KeycloakService
+import org.example.cargotransporationmonitoring.users.service.UserService
 import org.keycloak.admin.client.CreatedResponseUtil
 import org.slf4j.LoggerFactory
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.security.access.prepost.PreAuthorize
-import org.springframework.security.core.annotation.AuthenticationPrincipal
+import org.springframework.security.core.context.SecurityContextHolder
 import org.springframework.security.oauth2.jwt.Jwt
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.PutMapping
+import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
 class UserController(
-    private val keycloakService: KeycloakService
+    private val keycloakService: KeycloakService,
+    private val userService: UserService
 ) : UserApi, CustomUserApi {
 
     companion object {
@@ -55,6 +60,7 @@ class UserController(
     @PreAuthorize("hasAnyRole('admin', 'user')")
     override fun apiV1UserUserIdDelete(userId: String): ResponseEntity<Void> {
         keycloakService.deleteKeyCloakUserById(userId)
+        userService.unlinkUser(userId)
         return ResponseEntity.noContent().build()
     }
 
@@ -75,16 +81,29 @@ class UserController(
         return ResponseEntity.ok(listOf(GetUserResponse()))
     }
 
-    @PreAuthorize("hasRole('admin')")
-    override fun apiV1UserLinkPost(linkUserRequest: LinkUserRequest): ResponseEntity<Void> {
-        keycloakService.linkUserToAdmin(linkUserRequest)
+    @PreAuthorize("hasRole('user')")
+    @PutMapping("/api/v1/user/link")
+    fun apiV1UserLinkPost(@RequestBody linkUserRequest: LinkUserRequest): ResponseEntity<String> {
+        return ResponseEntity.ok().body(userService.linkUser(linkUserRequest))
+    }
+
+    @PreAuthorize("hasRole('user')")
+    @PutMapping("/api/v1/user/unlink/{userId}")
+    fun unlinkUserFromAdmin(@PathVariable userId: String): ResponseEntity<Void> {
+        userService.unlinkUser(userId)
         return ResponseEntity.ok().build()
     }
 
     @PreAuthorize("hasRole('admin')")
-    @GetMapping("/api/v1/user/unlink/{userId}")
-    fun unlinkUserFromAdmin(@PathVariable userId: String, @AuthenticationPrincipal jwt: Jwt): ResponseEntity<Void> {
-        keycloakService.unlinkUserFromAdmin(userId)
-        return ResponseEntity.ok().build()
+    @GetMapping("/api/v1/user/generateCode")
+    fun generateLinkCode(@RequestParam username: String): ResponseEntity<String> {
+        val adminId = getCurrentUserId()
+        return ResponseEntity.ok().body(userService.generateCode(username, adminId))
+    }
+
+    private fun getCurrentUserId(): String {
+        val jwt = SecurityContextHolder.getContext().authentication.principal as Jwt
+        return jwt.claims["sub"] as? String
+            ?: throw IllegalArgumentException("Subject (sub) not found in JWT")
     }
 }
